Ace3 Release - Revision r1259 (May 17th, 2021)
--------------------------------------------------
- AceGUI-3.0: Dropdown: Fix double click sound on toggling the dropdown (Issue #575)
- AceConfigDialog-3.0: Fix width number multiplier on multiselects (Issue #584)

Ace3 Release - Revision r1252 (May 17th, 2021)
--------------------------------------------------
- AceConfigDialog-3.0: Increased the frame level of dialogs to allow other addons to draw below them.
- AceConfigDialog-3.0: The validation/confirmation popup is now opaque and not click-through, to avoid accidentally activating options below it.
- AceHook-3.0: Allow UnhookAll to be used without embedding (Fixes #558)

Ace3 Release - Revision r1241 (October 13th, 2020)
--------------------------------------------------
- AceAddon-3.0: Suppress more Blizzard addon load events from activating Ace3 addons "too early", causing loading issues.
- AceGUI-3.0: Updated for Backdrop changes in WoW 9.0
- AceGUI-3.0: Re-structured widget releasing to avoid recursive release in some circumstances
- AceGUI-3.0: Label: Anchors are being refreshed when the font is changed (Ticket #540)
- AceGUI-3.0: Dropdown: Initialize the widget with an empty list so that AddItem can be used on a fresh dropdown (Ticket #542)

Ace3 Release - Revision r1227 (August 12th, 2019)
-------------------------------------------------
- AceConfigDialog-3.0: Fixed an issue with a missing template on WoW Classic (Ticket #517)

Ace3 Release - Revision r1224 (August 1st, 2019)
------------------------------------------------
- AceConfigDialog-3.0: Replace use of StaticPopup with a custom frame to minimize taint
- AceGUI-3.0: Ensure the OnLeave callback on various widgets still fires when its being released while visible (Ticket #505)
- AceGUI-3.0: Various fixes for anchoring problems in WoW 8.2 (Ticket #512, and other reports)

Ace3 Release - Revision r1214 (June 26th, 2019)
-----------------------------------------------