@@ -1,4 +1,7 @@
-Ace3 Release - Revision r1259 (May 17th, 2021)
+- AceGUI-3.0: MultiLineEditBox: Fixed an issue with mouse interactivity on re-cycled editboxes in certain circumstances.
+- AceGUI-3.0: Label: Use font objects to allow font fallback mechanics to be used.
+
+Ace3 Release - Revision r1259 (February 23rd, 2022)
 --------------------------------------------------
 - AceGUI-3.0: Dropdown: Fix double click sound on toggling the dropdown (Issue #575)
 - AceConfigDialog-3.0: Fix width number multiplier on multiselects (Issue #584)
